--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,23 @@
   "name": "Victask",
   "short_name": "Victask",
   "description": "Gestor de tareas, fechas y lista de la compra",
-  "start_url": "/",
+  "start_url": "/Tareas-victor/",
+  "scope": "/Tareas-victor/",
   "display": "standalone",
   "background_color": "#f0f6ff",
   "theme_color": "#3a7bd5",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/Tareas-victor/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "/Tareas-victor/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
